# Hexagon

./: Board.cpp  Board.h  Bot.cpp  Bot.h  CMakeLists.txt  Enums.h  Field.cpp  Field.h  Font.cpp  Font.h  Game.cpp  Game.h  Hexxagon.sln  Player.cpp  Player.h  Saver.cpp  Saver.h  Struct.h
Hexxagon/: Board.cpp  Board.h  Bot.cpp  Constans.h  Constants.cpp  Constants.h  Enums.cpp  Enums.h  Field.cpp  Field.h  Font.cpp  Font.h  Game.cpp  Game.h  Hexxagon.cpp  Hexxagon.vcxproj  Hexxagon.vcxproj.filters  Player.cpp  Player.h  Struct.cpp  Struct.h  Window.cpp  Window.h  Сonstants.cpp  Сonstants.h.cpp
